# reservoir_sampling

./: .gitignore  CMakeLists.txt  LICENSE
src/: main.cpp
src_cu/: .gitignore  CMakeLists.txt  camera.txt
src_cu/common/: CMakeLists.txt
src_cu/common/ext/: freeglut_static.lib  freeglut_staticd.lib  helper_math.h
src_cu/common/src/: image.cpp  image.h  render_utils.h  timer.h
src_cu/gpurt/: .gitignore  CMakeLists.txt
src_cu/gpurt/src/: main.cpp
src_cu/gpurt/src/bvh/: bvh_cuda.h  fast_bvh.h  triangle.h  vattrib.h
src_cu/gpurt/src/bvh/nvsbvh/: Array.h  BVH.cpp  BVH.h  BVHNode.cpp  BVHNode.h  CudaBVH.cpp  CudaBVH.h  CudaRenderKernel.h  Geometry.h  Scene.h  Sort.cpp  Sort.h  SplitBVHBuilder.cpp  SplitBVHBuilder.h  Util.cpp  Util.h  linear_math.h
src_cu/gpurt/src/core/: aabb.h  array.h  camera.h  common.h  constants.h  cudapbo.cpp  cudapbo.h  logger.h  platform.h  ray.h  rendertarget.h  util.cpp  util.h  vector.h
src_cu/gpurt/src/io/: loader.h  obj_loader.cpp  obj_loader.h
src_cu/gpurt/src/renderer/: kernel_common.h  lights.h  material.h  mk_path_tracer.cuh  mk_path_tracer.h  path_tracer.cu  scene.cpp  scene.h  tonemap.cuh
src_cu/gpurt/src/renderer/kernels/: kernel_pt_nee_reuse.h  kernel_pt_passive.h  kernel_pt_restir.h  kernel_pt_sample_brdf.h  kernel_pt_sample_light.h  kernel_pt_sample_mis.h
